--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expose-loader": "^0.7.5",
     "flatpickr": "^4.6.9",
     "html-to-image": "^1.6.2",
+    "highlight.js": "^10.7.2",
     "jquery": "^3.5.1",
     "moment": "^2.26.0",
     "popper.js": "^1.16.1",
