Update env example

--- a/app.env.example
+++ b/app.env.example
@@ -59,3 +59,9 @@ PDF_TITLE=DO report
 # telegram bot
 TELEGRAM_CALLBACK_URL=https://domain.com/telegram
 MANUAL_ENABLED=true
+ORG_NAME=
+ORG_ADDR=
+SITE_NAME=
+PHONE_NUMBER=
+EMAIL=
+CONTACT_URL=
