Add telegram gem

--- a/app.env.example
+++ b/app.env.example
@@ -36,3 +36,7 @@ VISIT_DURATION_MINUTE=30
 
 TICKET_SYNCED_DISTRICT_CODES=0110,0212
 PDF_TITLE=DO report
+
+# telegram bot
+TELEGRAM_USERNAME=
+TELEGRAM_TOKEN=
