--- a/app.env.example
+++ b/app.env.example
@@ -38,5 +38,6 @@ TICKET_SYNCED_DISTRICT_CODES=0110,0212
 PDF_TITLE=DO report
 
 # telegram bot
-TELEGRAM_USERNAME=
-TELEGRAM_TOKEN=
+TG_DO_REPORT_USERNAME=
+TG_DO_REPORT_TOKEN=
+TG_DO_REPORT_WEBHOOK_PATH=
