Update env example

--- a/app.env.example
+++ b/app.env.example
@@ -38,6 +38,4 @@ TICKET_SYNCED_DISTRICT_CODES=0110,0212
 PDF_TITLE=DO report
 
 # telegram bot
-TG_DO_REPORT_USERNAME=
-TG_DO_REPORT_TOKEN=
-TG_DO_REPORT_WEBHOOK_PATH=
+TELEGRAM_CALLBACK_URL=
