Update env example

--- a/app.env.example
+++ b/app.env.example
@@ -38,4 +38,4 @@ TICKET_SYNCED_DISTRICT_CODES=0110,0212
 PDF_TITLE=DO report
 
 # telegram bot
-TELEGRAM_CALLBACK_URL=
+TELEGRAM_CALLBACK_URL=http://www.example.com/telegram
