Fixed spec & update telegram callback url env

--- a/app.env.example
+++ b/app.env.example
@@ -38,5 +38,5 @@ TICKET_SYNCED_DISTRICT_CODES=0110,0212
 PDF_TITLE=DO report
 
 # telegram bot
-HOST_DEVELOPMENT= -- absolute ngrok host --
-HOST_PRODUCTION= -- absolute production host --
+TELEGRAM_CALLBACK_URL=https://domain.com/telegram
+MANUAL_ENABLED=true
