--- a/app.env.example
+++ b/app.env.example
@@ -26,6 +26,7 @@ TELEGRAM_ENABLED=false
 MAX_CSV_DOWNLOAD_SIZE=10000
 DASHBOARD_START_DATE=2020/08/28
 HOMEPAGE_START_DATE=2020/08/28
+PUBLIC_START_DATE=2021/07/27
 
 APP_VERSION=1.0
 # Shell with unicode support
