Update env example

--- a/app.env.example
+++ b/app.env.example
@@ -40,3 +40,4 @@ PDF_TITLE=DO report
 # telegram bot
 TELEGRAM_CALLBACK_URL=https://domain.com/telegram
 MANUAL_ENABLED=true
+PUBLIC_START_DATE=2021/07/27
