--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "quill-image-drop-module": "^1.0.3",
     "rails-erb-loader": "^5.5.2",
     "react": "^17.0.2",
+    "react-dates": "^21.8.0",
     "react-dom": "^17.0.2",
     "react_ujs": "^2.6.1",
     "select2": "^4.0.13",
